fix: update handlers to use builders properly